--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,12 @@ jobs:
     docker:
       - image: circleci/node:10
 
-    working_directory: ~/repo
+    working_directory: ~/repo/ComponentImporter
 
     steps:
       - checkout
       - run: yarn
-      - run: npm run build:components
+      - run: yarn cli ../design-system/components ../design-system.framerfx/code
 
   build:
     docker:
