--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,17 @@ jobs:
       - run: git clone https://${GITHUB_PERSONAL_TOKEN}@github.com/framer/ComponentImporter.git
       - run: yarn --cwd ComponentImporter build
       - run: yarn build:components
+      - run:
+          name: "Component Importer"
+          command: git config --global user.email addison@framer.com
+      - run:
+          name: "Setup Git user.name"
+          command: git config --global user.name addisonschultz
+      - run: git add .
+      - run: git commit -m "added a new component [skip ci]"
+      - run:
+          name: "Push components back to Github"
+          command: git push -q https://${GITHUB_PERSONAL_TOKEN}@github.com/addisonschultz/importingTest.git master
 
   build:
     docker:
