--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
 
     steps:
       - checkout
+      - run: git pull
       - run: yarn
       - run: npx framer-cli build design-system.framerfx
 
@@ -46,6 +47,7 @@ jobs:
 
     steps:
       - checkout
+      - run: git pull
       - run: yarn
       - run: npx framer-cli publish design-system.framerfx --yes
 
