changed when structure

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run:
           name: "Push components back to Github"
           command: git push -q https://${GITHUB_PERSONAL_TOKEN}@github.com/addisonschultz/importingTest.git master
-          when: "always"
+          when: always
 
   build:
     docker:
@@ -38,13 +38,13 @@ jobs:
       - checkout
       - run:
           command: git pull
-          when: "always"
+          when: always
       - run:
           command: yarn
-          when: "always"
+          when: always
       - run:
           command: npx framer-cli build design-system.framerfx
-          when: "always"
+          when: always
 
   publish:
     docker:
@@ -56,13 +56,13 @@ jobs:
       - checkout
       - run:
           command: git pull
-          when: "always"
+          when: always
       - run:
           command: yarn
-          when: "always"
+          when: always
       - run:
           command: npx framer-cli publish design-system.framerfx --yes
-          when: "always"
+          when: always
 
 workflows:
   version: 2
@@ -72,7 +72,7 @@ workflows:
       - build:
           requires:
             - import
-          when: "always"
+          when: always
       - publish:
           requires:
             - import
