--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ node_modules
 
 /design-system.framerfx/design/
 
+/design-system.framerfx/.yarnrc
+
 /design-system/tsconfig.json
 
 /ComponentImporter/
